<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:validatingEditText="http://schemas.android.com/apk/res-auto">

    <com.andreabaccega.widget.ValidatingEditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_parameter_default_min"
        android:inputType="textCapWords"
        android:key="min_value"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_parameter_min_name"
        validatingEditText:emptyAllowed="false"
        validatingEditText:testType="numeric" />
    <com.andreabaccega.widget.ValidatingEditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_parameter_default_max"
        android:inputType="textCapWords"
        android:key="max_value"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_parameter_max_name"
        validatingEditText:emptyAllowed="false"
        validatingEditText:testType="numeric"/>
    <com.andreabaccega.widget.ValidatingEditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_parameter_default_number"
        android:inputType="textCapWords"
        android:key="array_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_parameter_number_name"
        validatingEditText:emptyAllowed="false"
        validatingEditText:testType="numeric"/>
</PreferenceScreen>